Ip modifiée + ajout .idea dans gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@
 /.env.local
 /.env.local.php
 /.env.*.local
+/.idea
 /config/secrets/prod/prod.decrypt.private.php
 /public/bundles/
 /var/
@@ -14,7 +15,4 @@
 .phpunit.result.cache
 ###< phpunit/phpunit ###
 
-###> symfony/phpunit-bridge ###
-.phpunit.result.cache
-/phpunit.xml
-###< symfony/phpunit-bridge ###
+
